--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -43,9 +43,39 @@ main
                     display: inline-block
                     background: blue
                     padding: 16px 32px
-                    margin: 24px auto
+                    margin: 32px auto
                     background: linear-gradient(256.86deg, #0CF1D7 -37.8%, #114EF7 58.71%, #A91BFF 102.4%, #FC7541 123.84%), #FFFFFF
                     border-radius: 48px
+    .section-about
+        .container
+            padding: 0 0 64px
+            .row
+                align-items: center
+                div
+                    .card
+                        width: 418px
+                        height: 418px
+                        left: 137.25px
+                        background: #2B277C
+                        border-radius: 16px
+                    .before-title
+                        text-align: left
+                    h2
+                        font-weight: 500
+                        font-size: 48px
+                        line-height: 135%
+                        text-align: left
+                        margin: 24px 0
+                    p
+                        font-weight: 300
+                        font-size: 18px
+                        line-height: 150%
+                    span.steps
+                        font-weight: 400
+                        font-size: 21px
+                        line-height: 150%
+                        margin-top: 1rem
+                        display: block
     .section-how-work
         .container
             .row
@@ -135,6 +165,41 @@ main
                     img
                         max-width: 100%
                         max-height: 100%
+    .section-testimonials
+        .container
+            .row
+                align-items: center
+                div
+                    img
+                        border-radius: 24px
+                        width: 85%
+                        height: auto
+                    .icon-quote
+                        display: block
+                        width: 36px
+                        height: 36px
+                        background: transparent url('assets/img/quote.svg') no-repeat center center
+                    p
+                        font-style: normal
+                        font-weight: 400
+                        font-size: 20px
+                        line-height: 160%
+                        color: rgba(255, 255, 255, 0.72)
+                    .testimony-identity
+                        span
+                            display: block
+                        .testimony-name
+                            font-style: normal
+                            font-weight: 500
+                            font-size: 24px
+                            line-height: 33px
+                            color: #FFFFFF
+                        .testimony-role
+                            font-style: normal
+                            font-weight: 400
+                            font-size: 18px
+                            line-height: 150%
+                            color: rgba(255, 255, 255, 0.72)
     .section-action
         .container
             padding: 100px
