--- a/public/hyperfantasy-web/_src/_sass/_base.sass
+++ b/public/hyperfantasy-web/_src/_sass/_base.sass
@@ -23,3 +23,13 @@ a
     display: flex
     justify-content: center
     align-items: center
+.before-title
+    font-style: normal
+    font-weight: 600
+    font-size: 16px
+    line-height: 150%
+    letter-spacing: 0.16em
+    // color: #7F47F2
+    color: #b394f4
+    text-align: center
+    display: block
