--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -15,6 +15,9 @@ html(lang="en-GB")
 		link(rel="preconnect", href="https://fonts.googleapis.com")
 		link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
 		link(href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="preload", as="style" onload="this.rel='stylesheet'")
+		//- link(rel="stylesheet",type="text/css",href="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.6.6/glider.min.css")
+		link(rel="stylesheet",type="text/css",href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.min.css")
+		link(rel="stylesheet",type="text/css",href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.theme.min.css")
 	body
 		.bootstrap-wrapper
 			header
@@ -42,7 +45,6 @@ html(lang="en-GB")
 				.section.section-opening
 					.container
 						h1 Leveraging design<br/> &amp; tech to bring<br/> your fantasy life!
-						//- p We are Hyperfantasy, creative team that love to solve problem &amp; building awesome digital experiences
 						span Have any fantasy?
 						span
 							a(href="mailto:hello.hyperfantasy@gmail.com", alt="mailto:hello.hyperfantasy@gmail.com") Let&apos;s talk!
@@ -50,7 +52,19 @@ html(lang="en-GB")
 					.container
 						.row
 							.col-6
-								.card
+								.glide.hero
+									.glide__track(data-glide-el="track")
+										ul.glide__slides
+											li.glide__slide
+												.card#card-about-1
+											li.glide__slide
+												.card#card-about-2
+											li.glide__slide
+												.card#card-about-3
+									.glide__bullets(data-glide-el="controls[nav]")
+										button.glide__bullet(data-glide-dir="=0")
+										button.glide__bullet(data-glide-dir="=1")
+										button.glide__bullet(data-glide-dir="=2")
 							.col-6
 								span.before-title ABOUT US
 								h2 We are Hyperfantasy <br/>Let’s work together!
@@ -144,15 +158,42 @@ html(lang="en-GB")
 					.container
 						span.before-title TESTIMONIALS
 						h2 What they said about us
-						.row
-							.col-4
-								img(src="assets/img/photo.png", alt="Photo", width=245, height=320)
-							.col-8
-								span.icon-quote
-								p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. 
-								.testimony-identity
-									span.testimony-name Valentina Sevchenco
-									span.testimony-role Founder Koleksi
+						.glide.testimony
+							.glide__track(data-glide-el="track")
+								ul.glide__slides
+									li.glide__slide
+										.row
+											.col-4
+												img(src="assets/img/photo.png", alt="Photo", width=245, height=320)
+											.col-8
+												span.icon-quote
+												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. 
+												.testimony-identity
+													span.testimony-name Valentina Sevchenco
+													span.testimony-role Founder Koleksi
+									li.glide__slide
+										.row
+											.col-4
+												img(src="assets/img/photo.png", alt="Photo", width=245, height=320)
+											.col-8
+												span.icon-quote
+												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. 
+												.testimony-identity
+													span.testimony-name Valentina Sevchenco
+													span.testimony-role Founder Koleksi
+									li.glide__slide
+										.row
+											.col-4
+												img(src="assets/img/photo.png", alt="Photo", width=245, height=320)
+											.col-8
+												span.icon-quote
+												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. 
+												.testimony-identity
+													span.testimony-name Valentina Sevchenco
+													span.testimony-role Founder Koleksi
+							div.slider-controls(data-glide-el="controls")
+								button.slider-arrow(data-glide-dir="<") ‹
+								button.slider-arrow(data-glide-dir=">") ›
 				.section.section-action
 					.container
 						h2 Have any awesome fantasy?
@@ -190,3 +231,6 @@ html(lang="en-GB")
 										li
 											a(class="icon-link", href="https://www.instagram.com/hyperfantasy.creative", alt="Instagram", aria-label="Instagram")
 												span(class="icon", id="icon-instagram")
+	//- script(src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.6.6/glider.min.js")
+	script(src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/glide.min.js")
+	script(type='text/javascript', src='./main.js')
