--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -69,10 +69,11 @@ html(lang="en-GB")
 								span.before-title ABOUT US
 								h2 We are Hyperfantasy <br/>Let’s work together!
 								p We are creative team that love to solve problem &amp; building awesome digital products.
-								span.steps Listening  +  Design Thinking  +  Creative Solution
+								span.steps Listening   <span>+</span>   Design Thinking   <span>+</span>   Creative Solution
 				.section.section-how-work
 					.container
-						h2 What we do?
+						span.before-title WHAT WE DO
+						h2 Some of the solutions we offer
 						.row
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/airplay.svg", width=36, height=36, alt="Hyperfantasy Work - UI Design")
@@ -103,7 +104,8 @@ html(lang="en-GB")
 								h2 Micro Motion
 				.section.section-works
 					.container
-						h2 Our Works
+						span.before-title OUR WORKS
+						h2 Our case study &amp; projects
 						.row.card-work
 							.col-12.col-sm-12.col-md-6.col-lg-6
 								span Learning App
@@ -128,7 +130,8 @@ html(lang="en-GB")
 								img(src="assets/img/skew-photo-3.png", width=368, height=400, alt="BOKIA")
 				.section.section-shots
 					.container
-						h2 Our Shots
+						span.before-title OUR SHOTS
+						h2 Some our design explorations
 						.row
 							.col-12.col-sm-6.col-md-6.col-lg-4
 								img(src="assets/img/NFTy-square-dashoard-1.png", alt="NFTy Dashboard", width=350, height=350)
@@ -164,33 +167,34 @@ html(lang="en-GB")
 									li.glide__slide
 										.row
 											.col-4
-												img(src="assets/img/photo.png", alt="Photo", width=245, height=320)
+												//- assets/img/photo.png
+												img(src="https://heysaladindesign.web.app/img/image-testimonial-1.jpg", alt="Photo", width=245, height=320)
 											.col-8
 												span.icon-quote
-												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. 
+												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. Hyperfantasy always maintains very good relation with co-workers and clients. They learns quickly and I would have no hesitation in working with Didien once again in the future.
 												.testimony-identity
-													span.testimony-name Valentina Sevchenco
-													span.testimony-role Founder Koleksi
+													span.testimony-name Anna Jihad F.
+													span.testimony-role Founder Wolftagon &amp; Former Project manager at FXmedia
 									li.glide__slide
 										.row
 											.col-4
-												img(src="assets/img/photo.png", alt="Photo", width=245, height=320)
+												img(src="https://heysaladindesign.web.app/img/image-testimonial-2.jpg", alt="Photo", width=245, height=320)
 											.col-8
 												span.icon-quote
-												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. 
+												p Hyperfantasy is a rare and outstanding talents I have ever worked with. I've worked with them to develop UI/UX for an app and website. I was very impressed with his ability to translate a brief requirement into an awesome UI/UX design. He was always able to complete the task in a timely manner or even faster than the expected target. Great manner &amp; professionalism during our cooperation.
 												.testimony-identity
-													span.testimony-name Valentina Sevchenco
-													span.testimony-role Founder Koleksi
+													span.testimony-name Cokorda Gde Dwipa Susila
+													span.testimony-role Experienced SCM Profesional &amp; Founder Micepedia
 									li.glide__slide
 										.row
 											.col-4
-												img(src="assets/img/photo.png", alt="Photo", width=245, height=320)
+												img(src="https://heysaladindesign.web.app/img/image-testimonial-3.jpg", alt="Photo", width=245, height=320)
 											.col-8
 												span.icon-quote
-												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. 
+												p I have been consistently impressed with Hyperfantasy talents, efficiency, &amp; ability to get things done. I believe that their would be an excellent addition to your design projects. Hyperfantasy constantly seeks to learn more about illustration, UI/UX trends and latest tools in the industry &amp; also a quick learner who picks up new technology with great speed.
 												.testimony-identity
-													span.testimony-name Valentina Sevchenco
-													span.testimony-role Founder Koleksi
+													span.testimony-name Anas Al-Suhaim
+													span.testimony-role Founder &amp; CTO of Tammwel
 							div.slider-controls(data-glide-el="controls")
 								button.slider-arrow(data-glide-dir="<") ‹
 								button.slider-arrow(data-glide-dir=">") ›
