--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -40,7 +40,7 @@ main
                 .slider-controls
                     display: flex,
                     justify-content: flex-end,
-                    margin: -86px 0 0 0
+                    margin: -94px 0 0 0
                     z-index: 1
                     position: absolute
                     right: 0
@@ -101,14 +101,19 @@ main
                                     width: 418px
                                     height: 418px
                                     left: 137.25px
-                                    background: #2B277C
                                     border-radius: 16px
+                                    background-repeat: no-repeat
+                                    background-position: center center
+                                    background-size: cover
                                 #card-about-1
-                                    background: #2B277C
+                                    background-color: #2B277C
+                                    background-image: url('https://images.unsplash.com/photo-1573497620053-ea5300f94f21?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8N3x8aW50ZXJ2aWV3fGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60')
                                 #card-about-2
-                                    background: #5226b9
+                                    background-color: #2B277C
+                                    background-image: url('https://images.unsplash.com/photo-1532619187608-e5375cab36aa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=80')
                                 #card-about-3
-                                    background: #5c17b6
+                                    background-color: #2B277C
+                                    background-image: url('https://images.unsplash.com/photo-1545235617-9465d2a55698?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=500&q=80')
                         .glide__bullets
                             bottom: -32px
                     .glide:before
@@ -139,6 +144,8 @@ main
                         line-height: 150%
                         margin-top: 1rem
                         display: block
+                        span
+                            color: rgba(255, 255, 255, 0.50)
     .section-how-work
         .container
             .row
@@ -204,10 +211,10 @@ main
                         position: absolute
                         top: -200px
                         margin: 0 15%
-            .card-work:nth-child(3)
+            .card-work:nth-child(4)
                 div
                     img
-                        margin: 0
+                        margin: 0 0 0 -24px
     .section-shots
         .container
             .row
@@ -246,10 +253,11 @@ main
                         text-align: left
                         font-style: normal
                         font-weight: 400
-                        font-size: 20px
+                        font-size: 18px
                         line-height: 160%
                         color: rgba(255, 255, 255, 0.72)
                     .testimony-identity
+                        padding-top: 16px
                         padding-bottom: 48px
                         span
                             text-align: left
@@ -264,9 +272,9 @@ main
                         .testimony-role
                             font-style: normal
                             font-weight: 400
-                            font-size: 18px
+                            font-size: 16px
                             line-height: 150%
-                            color: rgba(255, 255, 255, 0.72)
+                            color: rgba(255, 255, 255, 0.50)
     .section-action
         .container
             padding: 100px
