--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -51,7 +51,7 @@ html(lang="en-GB")
 				.section.section-about
 					.container
 						.row
-							.col-6
+							.col-12.col-sm-12.col-md-6.col-lg-6
 								.glide.hero
 									.glide__track(data-glide-el="track")
 										ul.glide__slides
@@ -65,7 +65,7 @@ html(lang="en-GB")
 										button.glide__bullet(data-glide-dir="=0")
 										button.glide__bullet(data-glide-dir="=1")
 										button.glide__bullet(data-glide-dir="=2")
-							.col-6
+							.col-12.col-sm-12.col-md-6.col-lg-6
 								span.before-title ABOUT US
 								h2 We are Hyperfantasy <br/>Let’s work together!
 								p We are creative team that love to solve problem &amp; building awesome digital products.
@@ -166,10 +166,10 @@ html(lang="en-GB")
 								ul.glide__slides
 									li.glide__slide
 										.row
-											.col-4
+											.col-12.col-sm-12.col-md-4.col-lg-4
 												//- assets/img/photo.png
 												img(src="https://heysaladindesign.web.app/img/image-testimonial-1.jpg", alt="Photo", width=245, height=320)
-											.col-8
+											.col-12.col-sm-12.col-md-4.col-lg-8
 												span.icon-quote
 												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. Hyperfantasy always maintains very good relation with co-workers and clients. They learns quickly and I would have no hesitation in working with Didien once again in the future.
 												.testimony-identity
@@ -177,9 +177,9 @@ html(lang="en-GB")
 													span.testimony-role Founder Wolftagon &amp; Former Project manager at FXmedia
 									li.glide__slide
 										.row
-											.col-4
+											.col-12.col-sm-12.col-md-4.col-lg-4
 												img(src="https://heysaladindesign.web.app/img/image-testimonial-2.jpg", alt="Photo", width=245, height=320)
-											.col-8
+											.col-12.col-sm-12.col-md-4.col-lg-8
 												span.icon-quote
 												p Hyperfantasy is a rare and outstanding talents I have ever worked with. I've worked with them to develop UI/UX for an app and website. I was very impressed with his ability to translate a brief requirement into an awesome UI/UX design. He was always able to complete the task in a timely manner or even faster than the expected target. Great manner &amp; professionalism during our cooperation.
 												.testimony-identity
@@ -187,9 +187,9 @@ html(lang="en-GB")
 													span.testimony-role Experienced SCM Profesional &amp; Founder Micepedia
 									li.glide__slide
 										.row
-											.col-4
+											.col-12.col-sm-12.col-md-4.col-lg-4
 												img(src="https://heysaladindesign.web.app/img/image-testimonial-3.jpg", alt="Photo", width=245, height=320)
-											.col-8
+											.col-12.col-sm-12.col-md-4.col-lg-8
 												span.icon-quote
 												p I have been consistently impressed with Hyperfantasy talents, efficiency, &amp; ability to get things done. I believe that their would be an excellent addition to your design projects. Hyperfantasy constantly seeks to learn more about illustration, UI/UX trends and latest tools in the industry &amp; also a quick learner who picks up new technology with great speed.
 												.testimony-identity
