--- a/public/hyperfantasy-web/_src/_sass/_base.sass
+++ b/public/hyperfantasy-web/_src/_sass/_base.sass
@@ -1,9 +1,16 @@
+html
+    max-width: 100%
+    overflow-x: hidden
+    scroll-behavior: smooth
 body
     background: #030017
     color: #ffffff
     padding: 0
     margin: 0
     font-family: 'Poppins', 'san-serif'
+    max-width: 100%
+    overflow-x: hidden
+    width: auto
 ul
     padding: 0
     margin: 0
