--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -8,6 +8,7 @@ html(lang="en-GB")
 		meta(http-equiv='Cache-Control: max-age=31536000', content='public')
 		//- meta(http-equiv='Content-Security-Policy', content="default-src 'self';")
 		meta(name='description', content='Some description')
+		//- meta(name='viewport', content='user-scalable=0')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
 		link(rel="shortcut icon", href="https://hyperfantasy.co/favicon.ico", type="image/x-icon")
 		link(rel="stylesheet" href="main.css")
@@ -19,36 +20,69 @@ html(lang="en-GB")
 		link(rel="stylesheet",type="text/css",href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.min.css")
 		link(rel="stylesheet",type="text/css",href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.theme.min.css")
 	body
+		#mySidenav.sidenav
+			a.closebtn(href='javascript:void(0)', onclick='closeNav()') &times;
+			a(href="#section-opening", alt="Home", onclick='closeNav()') Home
+			a(href="#section-about", alt="About", onclick='closeNav()') About
+			a(href="#section-how-work", alt="Services", onclick='closeNav()') Services
+			a(href="#section-works", alt="Works", onclick='closeNav()') Works
+			a(href="#section-clients", alt="Trust", onclick='closeNav()') Trust
+			a(href="#section-action", alt="Contact", onclick='closeNav()') Contact
+		//- #mySidenav.sidenav
+		//- 	a.closebtn(href='javascript:void(0)' onclick='closeNav()') &times;
+		//- 	a(href='#') About
+		//- 	a(href='#') Services
+		//- 	a(href='#') Clients
+		//- 	a(href='#') Contact
 		.bootstrap-wrapper
+			//- #main
+			//- nav(role='navigation')
+			//- 	#menuToggle
+			//- 		input(type='checkbox')
+			//- 		span
+			//- 		span
+			//- 		span
+			//- 		ul#menu
+			//- 			a(href='#')
+			//- 				li Home
+			//- 			a(href='#')
+			//- 				li About
+			//- 			a(href='#')
+			//- 				li Info
+			//- 			a(href='#')
+			//- 				li Contact
+			//- 			a(href='https://erikterwan.com/' target='_blank')
+			//- 				li Show me more
 			header
 				.container
 					.row
-						.col-md-3
+						.col-10.col-sm-10.col-md-3.col-lg-3
 							img(src="assets/img/logo-hyperfantasy-pictogram.svg", width=56, height=52.69, alt="Hyperfantasy Logo")
-						.col-md-6
+						.col-2.col-sm-2.col-md-6.col-lg-6
+							span(style='font-size:30px;cursor:pointer' onclick='openNav()') &#x2630;
 							ul
 								li
-									a(href="#", alt="Home") Home
+									a(href="#section-opening", alt="Home") Home
 								li
-									a(href="#", alt="About") About
+									a(href="#section-about", alt="About") About
 								li
-									a(href="#", alt="Services") Services
+									a(href="#section-how-work", alt="Services") Services
 								li
-									a(href="#", alt="Works") Works
+									a(href="#section-works", alt="Works") Works
 								li
-									a(href="#", alt="Trust") Trust
+									a(href="#section-clients", alt="Trust") Trust
 								li
-									a(href="#", alt="Contact") Contact
+									a(href="#section-action", alt="Contact") Contact
 						.col-md-3
 							a.button.ghost(href="https://www.instagram.com/hyperfantasy.creative", target="_blank", alt="Portfolio") Portfolio
 			main
-				.section.section-opening
+				.section.section-opening#section-opening
 					.container
 						h1 Leveraging design<br/> &amp; tech to bring<br/> your fantasy life!
 						span Have any fantasy?
 						span
 							a(href="mailto:hello.hyperfantasy@gmail.com", alt="mailto:hello.hyperfantasy@gmail.com") Let&apos;s talk!
-				.section.section-about
+				.section.section-about#section-about
 					.container
 						.row
 							.col-12.col-sm-12.col-md-6.col-lg-6
@@ -70,7 +104,7 @@ html(lang="en-GB")
 								h2 We are Hyperfantasy <br/>Let’s work together!
 								p We are creative team that love to solve problem &amp; building awesome digital products.
 								span.steps Listening   <span>+</span>   Design Thinking   <span>+</span>   Creative Solution
-				.section.section-how-work
+				.section.section-how-work#section-how-work
 					.container
 						span.before-title WHAT WE DO
 						h2 Some of the solutions we offer
@@ -102,7 +136,7 @@ html(lang="en-GB")
 							.icon-item.col-xs-5.col-sm-4.col-md-3.col-lg-2
 								img(src="assets/img/icon/play-circle.svg", width=36, height=36, alt="Hyperfantasy Work - Micro Motion")
 								h2 Micro Motion
-				.section.section-works
+				.section.section-works#section-works
 					.container
 						span.before-title OUR WORKS
 						h2 Our case study &amp; projects
@@ -128,7 +162,7 @@ html(lang="en-GB")
 								p Online version of Mother &amp; Child Health Book for pregnant women, used by information &amp; media for recording fetal &amp; children&apos;s growth &amp; development.
 							.col-12.col-sm-12.col-md-6.col-lg-6
 								img(src="assets/img/skew-photo-3.png", width=368, height=400, alt="BOKIA")
-				.section.section-shots
+				.section.section-shots#section-shots
 					.container
 						span.before-title OUR SHOTS
 						h2 Some our design explorations
@@ -141,7 +175,7 @@ html(lang="en-GB")
 								img(src="assets/img/NFTy-square-web-1.png", alt="NFTy Website Landing Page", width=350, height=350)
 						.row.flex-center
 							a.button.ghost(href="https://www.instagram.com/hyperfantasy.creative", target="_blank", alt="Portfolio") Portfolio
-				.section.section-clients
+				.section.section-clients#section-clients
 					.container
 						//- h2 Clients
 						.row
@@ -157,7 +191,7 @@ html(lang="en-GB")
 								img(src="assets/img/logos/logo-tammwel.png", width=124, height=41.33, alt="Tammwel")
 							.col-6.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/logos/logo-sigmatech.png", width=160, height=46.65, alt="Sigmatech")
-				.section.section-testimonials
+				.section.section-testimonials#section-testimonials
 					.container
 						span.before-title TESTIMONIALS
 						h2 What they said about us
@@ -198,7 +232,7 @@ html(lang="en-GB")
 							div.slider-controls(data-glide-el="controls")
 								button.slider-arrow(data-glide-dir="<") ‹
 								button.slider-arrow(data-glide-dir=">") ›
-				.section.section-action
+				.section.section-action#section-action
 					.container
 						h2 Have any awesome fantasy?
 						span
@@ -209,17 +243,17 @@ html(lang="en-GB")
 						.col-md-5
 							ul
 								li
-									a(href="#", alt="Home") Home
+									a(href="#section-opening", alt="Home") Home
 								//- li
-								//- 	a(href="#") About
+								//- 	a(href="#section-about") About
 								li
-									a(href="#", alt="Services") Services
+									a(href="#section-how-work", alt="Services") Services
 								li
-									a(href="#", alt="Works") Works
+									a(href="#section-works", alt="Works") Works
 								li
-									a(href="#", alt="Trust") Trust
+									a(href="#section-clients", alt="Trust") Trust
 								li
-									a(href="#", alt="Contact") Contact
+									a(href="#section-action", alt="Contact") Contact
 						.col-md-2
 							img(src="assets/img/logo-hyperfantasy-pictogram.svg", width=48, height=45.26, alt="Hyperfantasy Logo")
 						.col-md-5
