--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -1,8 +1,227 @@
+body
+    .sidenav
+        height: 100%
+        width: 0
+        position: fixed
+        z-index: 1
+        top: 0
+        right: 0
+        background-color: rgba(3,0,23,0.64)
+        // /* The image used
+        // background-image: none
+        // /* Add the blur effect
+        // filter: blur(8px)
+        // -webkit-filter: blur(8px)
+        // /* Full height
+        // height: 100%
+        // /* Center and scale the image nicely
+        // background-position: center
+        // background-repeat: no-repeat
+        // background-size: cover
+        backdrop-filter: blur(25px)
+        overflow-x: hidden
+        transition: 0.5s
+        padding-top: 100px
+        a
+            padding: 16px 8px 16px 32px
+            text-decoration: none
+            font-size: 25px
+            color: rgba(266,255,255,0.64)
+            display: block
+            transition: 0.3s
+            &:hover
+                color: rgba(266,255,255,1.0)
+        .closebtn
+            position: absolute
+            right: 13px
+            top: 20px
+            // top: 0
+            // right: 25px
+            font-size: 36px
+            margin-left: 50px
+            color: #b394f4
+        @media screen and (max-height: 450px)
+            .sidenav
+                padding-top: 15px
+                a
+                    font-size: 18px
+    // .sidenav
+    //     height: 100%
+    //     width: 0
+    //     position: fixed
+    //     z-index: 1
+    //     top: 0
+    //     left: 0
+    //     background-color: #111
+    //     overflow-x: hidden
+    //     transition: 0.5s
+    //     padding-top: 60px
+    //     a
+    //         padding: 8px 8px 8px 32px
+    //         text-decoration: none
+    //         font-size: 25px
+    //         color: #818181
+    //         display: block
+    //         transition: 0.3s
+    //         &:hover
+    //             color: #f1f1f1
+    //     .closebtn
+    //         position: absolute
+    //         top: 0
+    //         right: 25px
+    //         font-size: 36px
+    //         margin-left: 50px
+    //     #main
+    //         transition: margin-left .5s
+    //         padding: 16px
+    //     @media screen and (max-height: 450px)
+    //     .sidenav
+    //         padding-top: 15px
+    //         a
+    //             font-size: 18px
+    // display: block
+    // margin: 0
+    // padding: 0
+    // background: #232323
+    // color: #cdcdcd
+    // font-family: "Avenir Next", "Avenir", sans-serif
+    // nav
+    //     // display: none
+    //     // width: 100%
+    //     // position: relative
+    //     // display: block
+    //     // display: flex
+    //     // justify-content: flex-end
+    //     // height: 0
+    //     // position: absolute
+    //     // right: 0
+    //     #menuToggle
+    //         // // width: 100%
+    //         // // position: absolute
+    //         // display: block
+    //         // position: relative
+    //         // // top: 50px
+    //         // // left: 50px
+    //         // top: 17px
+    //         // right: 4px
+    //         // z-index: 1
+    //         // -webkit-user-select: none
+    //         // user-select: none
+    //         display: block
+    //         position: absolute
+    //         top: 50px
+    //         right: 50px
+    //         z-index: 1
+    //         -webkit-user-select: none
+    //         -moz-user-select: none
+    //         -ms-user-select: none
+    //         user-select: none
+    //         input
+    //             display: block
+    //             width: 40px
+    //             height: 32px
+    //             position: absolute
+    //             top: -7px
+    //             left: -5px
+    //             cursor: pointer
+    //             opacity: 0
+    //             z-index: 2
+    //             -webkit-touch-callout: none
+    //         input:checked ~ span
+    //             opacity: 1
+    //             transform: rotate(45deg) translate(-2px, -1px)
+    //             background: #232323
+    //         input:checked ~ span:nth-last-child(3)
+    //             opacity: 0
+    //             transform: rotate(0deg) scale(0.2, 0.2)
+    //         input:checked ~ span:nth-last-child(2)
+    //             opacity: 1
+    //             transform: rotate(-45deg) translate(0, -1px)
+    //         span
+    //             display: block
+    //             width: 33px
+    //             height: 4px
+    //             margin-bottom: 5px
+    //             position: relative
+    //             background: #cdcdcd
+    //             border-radius: 3px
+    //             z-index: 1
+    //             transform-origin: 4px 0px
+    //             transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease
+    //         span:first-child
+    //             transform-origin: 0% 0%
+    //         span:nth-last-child(2)
+    //             transform-origin: 0% 100%
+    //         #menu
+    //             overflow-x: hidden
+    //             // overflow-x: hidden
+    //             // display: none
+    //             // position: absolute
+    //             // // width: 300px
+    //             // // width: 375px
+    //             width: 0
+    //             // left: 0
+    //             // // margin: -100px 0 0 -50px
+    //             // // margin: -100px 0 0 160%
+    //             // padding: 50px
+    //             // padding-top: 125px
+    //             // background: #ededed
+    //             // list-style-type: none
+    //             // -webkit-font-smoothing: antialiased
+    //             // transform-origin: 0% 0%
+    //             // // transform: translate(-100%, 0)
+    //             // // transform: translate(0%, 0)
+    //             // transform: none
+    //             // transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1)
+    //             position: absolute
+    //             // width: 0px
+    //             margin: -100px 0 0 0
+    //             // padding: 50px
+    //             padding-top: 125px
+    //             // right: -51px
+    //             opacity: 0
+    //             background: #ededed
+    //             list-style-type: none
+    //             -webkit-font-smoothing: antialiased
+    //             transform-origin: 0% 0%
+    //             transform: translate(100%, 0)
+    //             transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
+    //             a
+    //                 text-decoration: none
+    //                 color: #232323
+    //                 transition: color 0.3s ease
+    //                 li
+    //                     padding: 10px 0
+    //                     font-size: 22px
+    //             a:hover
+    //                 color: tomato
+    //         input:checked ~ #menu
+    //             // transform: none
+    //             // transform: translate(-100%, 0)
+    //             // transform: translate(100%, 0)
+    //             transform: none
+    //             opacity: 1
+    //             width: 100%
+    //             left: 0
+    //             width: 1182%
+    //             margin-left: -930%
+    //             // width: 300px
+    //             // right: 0
+    //             // overflow-x: hidden
+    //             // display: block
+    //         // @media screen and (max-width: 768px)
+    //         //     #menu
+    //         //         transform: none
+    //         //         opacity: 0
+    //         //         transition: opacity 0.5s cubic-bezier(0.77, 0.2, 0.05, 1)
 header
     margin-top: 24px
     .container
         .row
             .col-md-6
+                >span
+                    display: none
+                    width: inherit
                 display: flex
                 align-items: center
                 ul
@@ -341,13 +560,23 @@ footer
                     li:first-child
                         font-size: 12px
                         margin-right: 28px
-
+@media (max-width: 990px)
+    header
+        .container
+            .row
+                .col-md-6
+                    ul
+                        li
+                            padding: 0 0.64rem
 @media (max-width: 768px)
     header
         .container
             .row
                 .col-md-6
-                    display: none
+                    >span
+                        display: block
+                    ul
+                        display: none
                 .col-md-3:last-child
                     display: none
     main
