--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -144,7 +144,7 @@ html(lang="en-GB")
 							.col-12.col-sm-12.col-md-6.col-lg-6
 								span Learning App
 								h3 Lentera Kita
-								p We are Hyperfantasy, creative team that love to solve problem and building awesome digital products. Again, awesome ones.
+								p An Islamic digital learning platform that can be accessed by mobile from anywhere.
 							.col-12.col-sm-12.col-md-6.col-lg-6
 								img(src="assets/img/skew-photo-1.png", width=368, height=400, alt="Lentera Kita")
 						.row.card-work
