--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -18,7 +18,11 @@ body
         // background-position: center
         // background-repeat: no-repeat
         // background-size: cover
+        /* Add the blur effect
+        filter: blur(25px)
+        -webkit-filter: blur(25px)
         backdrop-filter: blur(25px)
+        -webkit-backdrop-filter: blur(25px)
         overflow-x: hidden
         transition: 0.5s
         padding-top: 100px
