--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -19,8 +19,8 @@ body
         // background-repeat: no-repeat
         // background-size: cover
         /* Add the blur effect
-        filter: blur(25px)
-        -webkit-filter: blur(25px)
+        // filter: blur(25px)
+        // -webkit-filter: blur(25px)
         backdrop-filter: blur(25px)
         -webkit-backdrop-filter: blur(25px)
         overflow-x: hidden
