--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -26,6 +26,12 @@ body
         overflow-x: hidden
         transition: 0.5s
         padding-top: 100px
+        @supports (backdrop-filter: none)
+            .sidenav
+                backdrop-filter: blur(25px)
+        @supports not (backdrop-filter: none)
+            .sidenav
+                background-color: rgba(3,0,23,0.94)
         a
             padding: 16px 8px 16px 32px
             text-decoration: none
