--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -6,7 +6,7 @@ body
         z-index: 1
         top: 0
         right: 0
-        background-color: rgba(3,0,23,0.64)
+        background-color: rgba(3,0,23,0.72)
         // /* The image used
         // background-image: none
         // /* Add the blur effect
@@ -26,12 +26,11 @@ body
         overflow-x: hidden
         transition: 0.5s
         padding-top: 100px
-        @supports (backdrop-filter: none)
-            .sidenav
-                backdrop-filter: blur(25px)
-        @supports not (backdrop-filter: none)
+        @supports ((-webkit-backdrop-filter: blur(25px)) or (backdrop-filter: blur(25px)))
             .sidenav
                 background-color: rgba(3,0,23,0.94)
+                -webkit-backdrop-filter: blur(25px)
+                backdrop-filter: blur(25px)
         a
             padding: 16px 8px 16px 32px
             text-decoration: none
