--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -34,7 +34,7 @@ html(lang="en-GB")
 		//- 	a(href='#') Services
 		//- 	a(href='#') Clients
 		//- 	a(href='#') Contact
-		.bootstrap-wrapper
+		.bootstrap-wrapper#main
 			//- #main
 			//- nav(role='navigation')
 			//- 	#menuToggle
