--- a/public/hyperfantasy-web/_src/_sass/_base.sass
+++ b/public/hyperfantasy-web/_src/_sass/_base.sass
@@ -3,6 +3,7 @@ html
     overflow-x: hidden
     scroll-behavior: smooth
 body
+    scroll-behavior: smooth
     background: #030017
     color: #ffffff
     padding: 0
