--- a/public/hyperfantasy-web/_src/_sass/_base.sass
+++ b/public/hyperfantasy-web/_src/_sass/_base.sass
@@ -1,6 +1,6 @@
 html
-    max-width: 100%
-    overflow-x: hidden
+    // max-width: 100%
+    // overflow-x: hidden
     scroll-behavior: smooth
 body
     scroll-behavior: smooth
@@ -9,8 +9,8 @@ body
     padding: 0
     margin: 0
     font-family: 'Poppins', 'san-serif'
-    max-width: 100%
-    overflow-x: hidden
+    // max-width: 100%
+    // overflow-x: hidden
     width: auto
 ul
     padding: 0
