--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -632,6 +632,12 @@ footer
                     div
                         img
                             margin: 24px auto
+        .section-testimonials
+            .container
+                .row
+                    div
+                        img
+                            width: 100%
         .section-action
             .container
                 padding: 48px
