--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -215,7 +215,7 @@ html(lang="en-GB")
 												img(src="https://heysaladindesign.web.app/img/image-testimonial-2.jpg", alt="Photo", width=245, height=320)
 											.col-12.col-sm-12.col-md-4.col-lg-8
 												span.icon-quote
-												p Hyperfantasy is a rare and outstanding talents I have ever worked with. I've worked with them to develop UI/UX for an app and website. I was very impressed with his ability to translate a brief requirement into an awesome UI/UX design. He was always able to complete the task in a timely manner or even faster than the expected target, great manner &amp; professionalism.
+												p Hyperfantasy is a rare &amp; outstanding talents I have ever worked with. I've worked with them to develop UI/UX for an app &amp; website. I was very impressed with his ability to translate a brief requirement into an awesome UI/UX design. They was always able to complete the task in a timely manner or even faster than the expected target. Great manner &amp; professionalism during our cooperation.
 												.testimony-identity
 													span.testimony-name Cokorda Gde Dwipa Susila
 													span.testimony-role Experienced SCM Profesional &amp; Founder Micepedia
