--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -632,6 +632,8 @@ footer
                     div
                         img
                             margin: 24px auto
+                    div:nth-child(1)
+                        order: 2
         .section-testimonials
             .container
                 .row
