--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -45,9 +45,16 @@ header
     .container
         .row
             .col-md-6
-                >span
+                #icon-burger
                     display: none
-                    width: inherit
+                    // width: inherit
+                    position: fixed
+                    z-index: 3
+                    background-color: rgba(3,0,23,.64)
+                    backdrop-filter: blur(25px) contrast(60%)
+                    -webkit-backdrop-filter: blur(25px) contrast(60%)
+                    padding: 0 8px 8px
+                    border-radius: 50%
                 display: flex
                 align-items: center
                 ul
@@ -399,7 +406,7 @@ footer
         .container
             .row
                 .col-md-6
-                    >span
+                    #icon-burger
                         display: block
                     ul
                         display: none
@@ -451,6 +458,11 @@ footer
                             margin: 24px auto
                     div:nth-child(1)
                         order: 2
+        .section-clients#section-clients
+            .container
+                .row
+                    >div
+                        margin: 16px 0
         .section-testimonials
             .container
                 .row
