margin-top main text

--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -51,7 +51,7 @@ html(lang="en-GB")
 			main
 				.section.section-opening#section-opening
 					.container
-						h1 Leveraging design<br/> &amp; tech to bring<br/> your fantasy life!
+						h1#main-header Leveraging design<br/> &amp; tech to bring<br/> your fantasy life!
 						span Have any fantasy?
 						span
 							a(href="mailto:hello.hyperfantasy@gmail.com", alt="mailto:hello.hyperfantasy@gmail.com") Let&apos;s talk!
