--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -174,28 +174,27 @@ html(lang="en-GB")
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-4.col-lg-4
-												//- assets/img/photo.png
-												img(src="https://heysaladindesign.web.app/img/image-testimonial-1.jpg", alt="Photo", width=245, height=320)
+												img(src="assets/img/photo-testimony-1.png", alt="Photo", width=245, height=320)
 											.col-12.col-sm-12.col-md-4.col-lg-8
 												span.icon-quote
-												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. Hyperfantasy always maintains very good relation with co-workers and clients. They learns quickly and I would have no hesitation in working with Didien once again in the future.
+												p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. Hyperfantasy always maintains very good relation with co-workers and clients. They learns quickly and I would have no hesitation in working with Hyperfantasy once again in the future.
 												.testimony-identity
 													span.testimony-name Anna Jihad F.
-													span.testimony-role Founder Wolftagon &amp; Former Project manager at FXmedia
+													span.testimony-role Founder Wolftagon &amp; Former Project Manager at FXmedia
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-4.col-lg-4
-												img(src="https://heysaladindesign.web.app/img/image-testimonial-2.jpg", alt="Photo", width=245, height=320)
+												img(src="assets/img/photo-testimony-2.png", alt="Photo", width=245, height=320)
 											.col-12.col-sm-12.col-md-4.col-lg-8
 												span.icon-quote
 												p Hyperfantasy is a rare &amp; outstanding talents I have ever worked with. I've worked with them to develop UI/UX for an app &amp; website. I was very impressed with his ability to translate a brief requirement into an awesome UI/UX design. They was always able to complete the task in a timely manner or even faster than the expected target. Great manner &amp; professionalism during our cooperation.
 												.testimony-identity
 													span.testimony-name Cokorda Gde Dwipa Susila
-													span.testimony-role Experienced SCM Profesional &amp; Founder Micepedia
+													span.testimony-role Head of Shipping &amp; Export Import at PT Freeport Indonesia
 									li.glide__slide
 										.row
 											.col-12.col-sm-12.col-md-4.col-lg-4
-												img(src="https://heysaladindesign.web.app/img/image-testimonial-3.jpg", alt="Photo", width=245, height=320)
+												img(src="assets/img/photo-testimony-3.png", alt="Photo", width=245, height=320)
 											.col-12.col-sm-12.col-md-4.col-lg-8
 												span.icon-quote
 												p I have been consistently impressed with Hyperfantasy talents, efficiency, &amp; ability to get things done. I believe that their would be an excellent addition to your design projects. Hyperfantasy constantly seeks to learn more about illustration, UI/UX trends and latest tools in the industry &amp; also a quick learner who picks up new technology with great speed.
