--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -29,7 +29,7 @@ body
         .closebtn
             position: absolute
             right: 13px
-            top: 20px
+            top: 16px
             // top: 0
             // right: 25px
             font-size: 36px
@@ -67,6 +67,9 @@ header
                 display: flex
                 justify-content: center
                 align-items: center
+                #icon-burger
+                    top: 30px
+                    right: 12px
             .col-md-3:last-child
                 display: flex
                 justify-content: flex-end
@@ -401,6 +404,38 @@ footer
                     ul
                         li
                             padding: 0 0.64rem
+@media (max-width: 820px)
+    main
+        .section-about
+            .container
+                .row
+                    div:nth-child(2)
+                        margin-top: 86px
+        .section-works
+            .container
+                .card-work
+                    padding: 32px 16px
+                    margin: 24px 0
+                    div
+                        img
+                            position: relative
+                            height: 240px
+                            width: auto
+                            top: 0
+                            margin: 24px auto
+                .card-work:nth-child(4)
+                    div
+                        img
+                            margin: 24px auto
+                    div:nth-child(1)
+                        order: 2
+        .section-shots
+            .container
+                .row
+                    justify-content: center
+                    div
+                        img
+                            margin: 0px auto 2rem
 @media (max-width: 768px)
     header
         .container
@@ -423,7 +458,6 @@ footer
             .container
                 h1
                     font-size: 36px
-        
         .section-about
             .container
                 .row
@@ -439,25 +473,7 @@ footer
                                         height: 300px
                     div:nth-child(2)
                         margin-top: 86px
-        .section-works
-            .container
-                .card-work
-                    padding: 32px 16px
-                    margin: 24px 0
-                    div
-                        img
-                            // display: none
-                            position: relative
-                            height: 240px
-                            width: auto
-                            top: 0
-                            margin: 24px auto
-                .card-work:nth-child(4)
-                    div
-                        img
-                            margin: 24px auto
-                    div:nth-child(1)
-                        order: 2
+        // .section-works
         .section-clients#section-clients
             .container
                 .row
