--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -409,6 +409,11 @@ footer
         .section-about
             .container
                 .row
+                    .glide
+                        margin: 0 auto
+                    div
+                        .before-title, span, h2, p
+                            text-align: center
                     div:nth-child(2)
                         margin-top: 86px
         .section-works
@@ -471,6 +476,8 @@ footer
                                     .card
                                         width: 300px
                                         height: 300px
+                        .before-title, span, h2, p
+                            text-align: left
                     div:nth-child(2)
                         margin-top: 86px
         // .section-works
