--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -230,7 +230,7 @@ html(lang="en-GB")
 			footer
 				.container
 					.row
-						.col-md-5
+						.col-12.col-sm-12.col-md-5.col-lg-5
 							ul
 								li
 									a(href="#main", alt="Home") Home
@@ -242,9 +242,9 @@ html(lang="en-GB")
 									a(href="#section-clients", alt="Trust") Trust
 								li
 									a(href="#section-action", alt="Contact") Contact
-						.col-md-2
+						.col-12.col-sm-2.col-md-2.col-lg-2
 							img(src="assets/img/logo-hyperfantasy-pictogram.svg", width=48, height=45.26, alt="Hyperfantasy Logo")
-						.col-md-5
+						.col-12.col-sm-10.col-md-5.col-lg-5
 							ul
 								li
 									a(href="https://www.instagram.com/hyperfantasy.creative", target="_blank", alt="© 2022, Hyperfantasy. All rights reserved.") © 2022, Hyperfantasy. All rights reserved.
