--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -396,7 +396,7 @@ footer
                     li:first-child
                         font-size: 12px
                         margin-right: 28px
-@media (max-width: 990px)
+@media (max-width: 992px)
     header
         .container
             .row
@@ -404,7 +404,6 @@ footer
                     ul
                         li
                             padding: 0 0.64rem
-@media (max-width: 820px)
     main
         .section-about
             .container
@@ -441,6 +440,13 @@ footer
                     div
                         img
                             margin: 0px auto 2rem
+    footer
+        .container
+            .row
+                .col-md-5:first-child
+                    display: none
+                .col-md-2:nth-child(2)
+                    display: none
 @media (max-width: 768px)
     header
         .container
@@ -515,8 +521,10 @@ footer
                         ul
                             flex-direction: row
                 .col-md-5:first-child
+                    display: flex
                     order: 2
                 .col-md-2:nth-child(2)
+                    display: flex
                     order: 1
                 .col-md-5:last-child
                     order: 3
